fixed scaling issues on mobile

--- a/WebDevCurrent/assets/style.css
+++ b/WebDevCurrent/assets/style.css
@@ -156,7 +156,7 @@ section h2 {
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        width: 100%;
+        width: 100vw;
         box-shadow: 10px 15px 10px 10px rgba(0, 0, 0, 0.3);
         transform: translateX(100%);
         transition: transform 0.5s ease;
@@ -164,7 +164,7 @@ section h2 {
 
     .nav-links li {
         opacity: 0;
-        padding-bottom: 100px;
+        padding-bottom: 15vh;
         font-size: 2vh;
     }
 
